# inferno-core

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml  test.xml
auxfiles-ru/data/inferno_core_scripts/: augmentInfoBoxes.lua  dialogueBoxes.lua
locale/data/blueprints.xml.append/: de.po  en.po  en.po.new  es.po  fr.po  ja.po  ko.po  pt_BR.po  ru.po  zh_Hans.po
locale/data/events_special_curator.xml.append/: de.po  en.po  es.po  fr.po  ko.po  ru.po  zh_Hans.po
locale/data/events_special_lightspeed.xml.append/: de.po  en.po.new  es.po  fr.po  ko.po  ru.po  zh_Hans.po
locale/data/events_special_main.xml.append/: de.po  en.po  es.po  fr.po  ko.po  pt_BR.po  ru.po  zh_Hans.po
locale/data/events_special_mechanical.xml.append/: de.po  en.po.new  ru.po
locale/data/events_special_storage.xml.append/: de.po  en.po  fr.po  ja.po  ko.po  pt_BR.po  ru.po  zh_Hans.po
locale/data/text_misc.xml.append/: en.po  en.po.new  fr.po  ru.po
locale/mod-appendix/metadata.xml/: de.po  en.po  en.po.new  fr.po  ru.po
src-en/data/: text_misc.xml.append
