[tool.poetry]
name = "inferno-core-translation"
version = "0.1.0"
description = ""
authors = ["ranhai613 <hulanhai613@gmail.com>"]
readme = "README.md"
packages = [{include = "inferno_core_translation"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
